--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "gulp": "^3.9.1",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.1.0",
+    "gulp-sourcemaps": "^1.6.0",
     "gulp-util": "^3.0.7",
     "jsdom": "^9.4.1",
     "sinon": "^1.17.5"
