Trying out redux, first reducer

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-bootstrap": "^0.30.0",
     "react-dom": "^15.3.0",
     "react-proxy": "^1.1.8",
+    "redux": "^3.5.2",
     "webpack-hot-middleware": "^2.12.2"
   },
   "devDependencies": {
