--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "webpack-hot-middleware": "^2.12.2"
   },
   "devDependencies": {
+    "babel-loader": "^6.2.4",
+    "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
     "chai": "^3.5.0",
     "enzyme": "^2.4.1",
     "eslint-rules-es2015": "^1.0.0",
+    "express": "^4.14.0",
     "gulp": "^3.9.1",
     "gulp-mocha": "^2.2.0",
     "gulp-plumber": "^1.1.0",
@@ -28,7 +31,9 @@
     "gulp-util": "^3.0.7",
     "jsdom": "^9.4.1",
     "mockery": "^1.7.0",
-    "sinon": "^1.17.5"
+    "sinon": "^1.17.5",
+    "webpack": "^1.13.1",
+    "webpack-dev-middleware": "^1.6.1"
   },
   "scripts": {
     "test": "gulp test",
