--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,9 @@
 {
   "presets": ["es2015", "react", "stage-0"],
-  "sourceMaps": "both"
+  "sourceMaps": "both",
+  "env": {
+    "development": {
+      //"presets": ["react-hmre"]
+    }
+  }
 }
