--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "babel-loader": "^6.2.4",
+    "babel-preset-react-hmre": "^1.1.1",
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.11.6",
     "chai": "^3.5.0",
@@ -33,12 +34,14 @@
     "mockery": "^1.7.0",
     "sinon": "^1.17.5",
     "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1"
+    "webpack-dev-middleware": "^1.6.1",
+    "webpack-hot-middleware": "^2.12.2"
   },
   "scripts": {
     "test": "gulp test",
     "watch": "gulp watch",
-    "start": "node index.js"
+    "start": "node index.js",
+    "start-local": "node server.js"
   },
   "repository": {
     "type": "git",
