fix warnings add readme

--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
     "mockery": "^1.7.0",
     "sinon": "^1.17.5",
     "webpack": "^1.13.1",
-    "webpack-dev-middleware": "^1.6.1",
-    "webpack-hot-middleware": "^2.12.2"
+    "webpack-dev-middleware": "^1.6.1"
   },
   "scripts": {
     "test": "gulp test",
