--- a/circle.yml
+++ b/circle.yml
@@ -8,7 +8,7 @@ dependencies:
   override:
     - npm install
     - docker info
-    - docker build -t cheekytinker/tddreact:latest .
+    - docker build -t cheekytinker/tddreact:latest
 
 deployment:
   development:
