--- a/circle.yml
+++ b/circle.yml
@@ -7,6 +7,8 @@ machine:
 dependencies:
   override:
     - npm install
+    - npm install -g webpack
+    - webpack --progress --config webpack.config.prod.js
     - docker info
     - docker build -t cheekytinker/tddreact:latest
 
